@@ -37,5 +37,9 @@
     <input class="checkbox" type="checkbox" value="checkbox 2"/>
     <input class="checkbox" type="checkbox" value="checkbox 3"/>
 
+    <input type="radio" class="radio" value="radio 1">
+    <input type="radio" class="radio" value="radio 2">
+    <input type="radio" class="radio" value="radio 3">
+
   </body>
 </html>
